# src/routes/UsersRoutes.js
@@ -1,0 +1,27 @@
+import { Router } from "express";
+import { GetParents, DeleteTableUsers,CreateUsers,GetUserById,EditUser,DeleteUser, GetChilds, GetUsers, uptadeImage} from '../Controllers/UsersController.js'; 
+import swaggerUi from 'swagger-ui-express';
+import uploadMiddleware from "../middleware/upload.js";
+import authMiddleware from '../middleware/auth.js';
+import swaggerFile from '../swagger-output.json' assert{ type: 'json'};
+import fakerExtraActivity from '../helpper/faker.js';
+import { assert } from "console";
+
+const router = Router();
+
+router.use('/doc', swaggerUi.serve, swaggerUi.setup(swaggerFile))
+
+//Users
+router.get("/padres", authMiddleware, GetParents)
+router.post("/Users",uploadMiddleware, CreateUsers)
+router.get('/Users/:id', GetUserById)
+router.put('/Users/:id',EditUser)
+router.delete('/Users/:id',DeleteUser)
+router.get("/hijos/:id", GetChilds)
+router.get("/Users", GetUsers)  
+router.put('/UsersImage/:id',uploadMiddleware,uptadeImage )
+router.get('/faker', fakerExtraActivity)
+router.delete('/deleteTableUsers', DeleteTableUsers)
+
+
+export default router;
